# santa-linux

./: .gitignore  README.md  local-build.sh  qemu-run.sh  runbuild.sh
docker/: Dockerfile  container.sh  init.sh
ext-tree/: .gitignore  Config.in  external.desc  external.mk
ext-tree/configs/: linux.config  rust-santa-clone-qemu_x86_64_defconfig  santa-clone-qemu_x86_64_defconfig
ext-tree/overlay/: allowme
ext-tree/overlay/etc/: inittab
ext-tree/overlay/etc/init.d/: S90modules  S99santa_daemon
ext-tree/overlay/opt/santa/: rules.json
ext-tree/package/rust_santa_daemon/: Config.in  rust_santa_daemon.mk
ext-tree/package/santa_kmod/: Config.in  santa_kmod.mk
src/rust_santa_daemon/: .gitignore  Cargo.toml  testrules.json
src/rust_santa_daemon/src/libsanta/: cache.rs  commands.rs  consts.rs  daemon.rs  engine.rs  engine_types.rs  lib.rs  netlink.rs  rules.rs  uxpc.rs
src/rust_santa_daemon/src/santa-daemon/: cache.rs  daemon.rs  engine.rs  main.rs  netlink.rs  tracer.rs
src/rust_santa_daemon/src/santactl/: main.rs
src/santa_kmod/: Makefile  santa_clone.c  santa_clone.h
src/testbins/: allowme.c  blockme  blockme.c  testbin  testbin.c
